<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.asus_x550z.praktikumpbb.MainActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="22dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nrp"
        android:textSize="18dp"
        android:layout_marginTop="10dp"
        android:textStyle="italic"
        android:textColor="@color/colorNormal"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameList"
        android:layout_marginTop="10pt"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/Button1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modul1"
                    android:layout_marginTop="15dp"
                    android:textSize="14dp"
                    android:background="@color/colorBlue"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/Button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/modul2"
                    android:textSize="14dp"
                    android:background="@color/colorBlue"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/Button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modul3"
                    android:layout_marginTop="10dp"
                    android:textSize="14dp"
                    android:background="@color/colorBlue"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/Button4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modul4"
                    android:textSize="14dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorBlue"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/Button5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modul5"
                    android:textSize="14dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorBlue"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/Button6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modul6"
                    android:textSize="14dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorBlue"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/Button7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modul7"
                    android:textSize="14dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorBlue"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/Button8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modul8"
                    android:textSize="14dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorBlue"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>
