<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context="com.example.asus_x550z.praktikumpbb.modul1.modul1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textSize="22dp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="22dp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nrp"
        android:textSize="18dp"
        android:textStyle="italic"
        android:textColor="@color/colorWhite" />

</LinearLayout>
